--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=lxsOYoT6"></script>
 </body>
 </html>
